@@ -1,3 +1,13 @@
+2011-10-24  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        [GTK] Fix make distcheck build
+        https://bugs.webkit.org/show_bug.cgi?id=69745
+
+        Reviewed by Martin Robinson.
+
+        * GNUmakefile.am:
+        * GNUmakefile.list.am:
+
 2011-10-24  Alexander Pavlov  <apavlov@chromium.org>
 
         Web Inspector: [Styles] Adding a new style rule breaks things
